plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JPA 의존성: 데이터베이스 ORM 기능 제공
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 유효성 검증 기능: 폼 입력값 등의 유효성 검증에 사용
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 웹 관련 의존성: REST API, MVC 기능 제공
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok: 반복 코드(getter, setter 등)를 줄이기 위한 어노테이션 프로세서
    compileOnly 'org.projectlombok:lombok'

    // 개발 편의성 도구: 코드 변경 시 자동 재시작 기능 제공
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Lombok 어노테이션 처리기: 컴파일 타임에 Lombok 어노테이션 처리
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트 프레임워크: JUnit, Mockito 등 테스트 도구 모음
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // JUnit 플랫폼 런처: IDE에서 JUnit 테스트 실행을 지원
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // MySQL JDBC 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Swagger UI 및 OpenAPI 문서
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // AWS S3 스토리지 서비스와 스프링 부트 통합을 위한 스프링 클라우드 AWS 스타터
//    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // .env 파일을 통한 환경변수 설정을 지원하는 라이브러리
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
